--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "next": "14.2.5",
     "pdfkit": "0.15.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "iconv-lite": "0.6.3"
   },
   "devDependencies": {
     "@types/node": "20.11.30",
