--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "dependencies": {
     "@supabase/supabase-js": "2.46.1",
     "next": "14.2.5",
-    "pdfkit": "0.15.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "iconv-lite": "0.6.3"
+    "iconv-lite": "0.6.3",
+    "pdf-lib": "1.17.1"
   },
   "devDependencies": {
     "@types/node": "20.11.30",
