--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "2.46.1",
+    "iconv-lite": "0.6.3",
     "next": "14.2.5",
+    "pdf-lib": "1.17.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "iconv-lite": "0.6.3",
-    "pdf-lib": "1.17.1"
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@types/node": "20.11.30",
