--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "pdf-lib": "1.17.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/node": "20.11.30",
